#6404: DataExporter: use java.util.Base64